--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,72 @@
     transform: rotate(360deg);
   }
 }
+
+.header-container {
+  background-color: pink;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 56px;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  align-items: center;
+  z-index: 10000;
+}
+
+#content {
+  position:relative;
+  top: 56px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: row;
+  align-content: stretch;
+}
+
+.left-container {
+  background-color: lightyellow;
+  min-width: 220px;
+  max-width: 440px;
+  flex: 1 1 20%;
+  min-height: 100%;
+  position: relative;
+}
+
+.home {
+  background-color: lightblue;
+  flex: 1 1 80%;
+}
+
+.footer-container {
+  background-color: lightgreen;
+  position: relative;
+  width: 100%;
+  height: 56px;
+}
+
+#filter-box {
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-component {
+  margin: 2rem;
+  background-color: white;
+}
+
+.home-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: right;
+}
+
+.activity-card {
+  flex: 1 1 20%;
+  margin: 1rem;
+  background-color: white;
+  max-width: 20%;
+}
