--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 56px;
+  height: 70px;
   display: flex;
   flex-direction: row;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
@@ -51,18 +51,59 @@
   z-index: 10000;
 }
 
+.center-header {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  font-weight: normal;
+  text-align: center;
+  flex-direction: column;
+}
+
+.left-header {
+  display: flex;
+  flex: 1;
+  justify-content: left;
+  font-weight: normal;
+  text-align: center;
+  flex-direction: column;
+}
+.right-header {
+  display: flex;
+  flex: 1;
+  justify-content: right;
+  font-weight: normal;
+  text-align: center;
+  flex-direction: column;
+}
+.random-button {
+  background-color: lightcoral;
+  color: white;
+  word-wrap: normal;
+  border-radius: 5px;
+  width: 5em;
+  padding: .25em;
+  cursor: pointer;
+}
+
+.random-button:hover {
+  background-color: lightsalmon;
+}
+
 #content {
-  position:relative;
-  top: 56px;
+  position: relative;
+  min-height: 100%;
+  top: 70px;
   overflow-x: hidden;
   overflow-y: auto;
   display: flex;
   flex-direction: row;
   align-content: stretch;
+  min-height: 100vh;
 }
 
 .left-container {
-  background-color: lightyellow;
+  background-color: #e6e6e6;
   min-width: 220px;
   max-width: 440px;
   flex: 1 1 20%;
@@ -71,8 +112,9 @@
 }
 
 .home {
-  background-color: lightblue;
+  background-color: white;
   flex: 1 1 80%;
+  min-height: 100%;
 }
 
 .footer-container {
@@ -89,7 +131,7 @@
 
 .filter-component {
   margin: 2rem;
-  background-color: white;
+  background-color: lightgray;
 }
 
 .home-content {
@@ -97,11 +139,65 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: right;
+  padding: 0.5em;
 }
 
 .activity-card {
   flex: 1 1 20%;
-  margin: 1rem;
-  background-color: white;
+  margin: 0.5em;
+  padding: 1em;
+  background-color: #f2f2f2;
+  min-width: 150px;
   max-width: 20%;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px lightgray;
+}
+
+.selected-activity-card {
+  background-color: palegoldenrod;
+}
+
+.collapsible {
+  background-color: lightgray;
+  color: #444;
+  padding: 18px;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active,
+.collapsible:hover {
+  background-color: #ccc;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
+
+.filter-collapsible-group {
+  cursor: pointer;
+  border: solid 1px lightgray;
+  padding: 15px;
+  background-color: #e6e6e6;
+  color: black;
+  font-family: verdana;
+}
+
+.filter-content {
+  border-left: solid 1px #f2f2f2;
+  border-right: solid 1px #f2f2f2;
+  border-bottom: solid 1px #f2f2f2;
+  border-radius: 0 0 5px 5px;
+  padding: 15px;
+  font-family: verdana;
+  font-size: 14px;
+}
+
+.filter-element {
+  cursor: pointer;
 }
