--- a/src/App.css
+++ b/src/App.css
@@ -37,55 +37,69 @@
   }
 }
 
+#selected-activity {
+  display: block;
+  height: 70px;
+  margin-top: -140px;
+  visibility: hidden;
+}
+
 .header-container {
   background-color: pink;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   height: 70px;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 30% 40% 30%;
+  /* grid-template-rows: 70px; */
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   align-items: center;
   z-index: 10000;
 }
 
 .center-header {
-  display: flex;
-  flex: 1;
+  /* background-color: lime; */
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  padding: 20px;
+  font-size: 30px;
+  font-weight: 700;
+  font-family: "Libre Baskerville", serif;
   justify-content: center;
   font-weight: normal;
   text-align: center;
-  flex-direction: column;
 }
-
+/* 
 .left-header {
-  display: flex;
-  flex: 1;
-  justify-content: left;
+  background-color: mediumaquamarine;
   font-weight: normal;
   text-align: center;
-  flex-direction: column;
-}
+} */
 .right-header {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
   display: flex;
-  flex: 1;
-  justify-content: right;
+  justify-content:flex-end;
+  padding: 1em;
   font-weight: normal;
   text-align: center;
-  flex-direction: column;
+  display: flex;
+  /* flex-direction: row; */
 }
 .random-button {
+  flex: 1 1 20%;
   background-color: lightcoral;
   color: white;
   word-wrap: normal;
   border-radius: 5px;
-  width: 5em;
-  padding: .25em;
+  max-width: 20%;
+  margin: 0.25em;
+  padding: 0.25em;
+  text-decoration: none;
   cursor: pointer;
 }
-
 .random-button:hover {
   background-color: lightsalmon;
 }
@@ -100,6 +114,7 @@
   flex-direction: row;
   align-content: stretch;
   min-height: 100vh;
+  scroll-behavior: smooth;
 }
 
 .left-container {
@@ -109,6 +124,23 @@
   flex: 1 1 20%;
   min-height: 100%;
   position: relative;
+  justify-content: center;
+}
+
+.clear-filter-button {
+  background-color: lightcoral;
+  text-align: center;
+  color: white;
+  width: 50%;
+  margin: 0.5rem;
+  word-wrap: normal;
+  border-radius: 5px;
+  padding: 0.25em;
+  cursor: pointer;
+}
+
+.clear-filter-button:hover {
+  background-color: lightsalmon;
 }
 
 .home {
@@ -154,7 +186,14 @@
 }
 
 .selected-activity-card {
-  background-color: palegoldenrod;
+  background-color: #ffcccc;
+  flex: 1 1 20%;
+  margin: 0.5em;
+  padding: 1em;
+  min-width: 150px;
+  max-width: 20%;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px lightgray;
 }
 
 .collapsible {
