--- a/src/App.css
+++ b/src/App.css
@@ -170,7 +170,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: right;
+  justify-content: flex-start;
   padding: 0.5em;
 }
 
