--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,18 +13,6 @@
   }
 }
 
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
@@ -35,122 +23,6 @@
   }
   to {
     transform: rotate(360deg);
-  }
-}
-
-@media only screen and (min-width: 775px) {
-  .header-container {
-    background-color: pink;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 70px;
-    display: grid;
-    grid-template-columns: 30% 40% 30%;
-    /* grid-template-rows: 70px; */
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    align-items: center;
-    z-index: 10000;
-  }
-
-  .center-header {
-    /* background-color: lime; */
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    padding: 20px;
-    font-size: 30px;
-    font-weight: 700;
-    font-family: "Libre Baskerville", serif;
-    justify-content: center;
-    font-weight: normal;
-    text-align: center;
-    visibility: visible;
-  }
-
-  .center-header-sm {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    padding: 20px;
-    font-size: 30px;
-    font-weight: 700;
-    font-family: "Libre Baskerville", serif;
-    justify-content: center;
-    font-weight: normal;
-    text-align: center;
-    visibility: hidden;
-  }
-
-  .right-header {
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
-    display: flex;
-    justify-content:flex-end;
-    padding: 1em;
-    font-weight: normal;
-    text-align: center;
-    display: flex;
-    /* flex-direction: row; */
-  }
-}
-
-.logo-img {
-  width: 30px;
-  height: 30px;
-}
-
-@media only screen and (max-width: 775px) {
-  .header-container {
-    background-color: pink;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 70px;
-    display: grid;
-    grid-template-columns:60px 60px auto;
-    grid-template-rows: 70px;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    align-items: center;
-    z-index: 10000;
-  }
-
-  .center-header {
-    /* background-color: lime; */
-    visibility: hidden;
-  }
-
-  .center-header-sm {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-    padding: 20px;
-    font-size: 30px;
-    font-weight: 700;
-    font-family: "Libre Baskerville", serif;
-    justify-content: left;
-    font-weight: normal;
-    text-align: center;
-    visibility: visible;
-  }
-
-  .right-header {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    display: flex;
-    justify-content:flex-end;
-    padding: 1em;
-    font-weight: normal;
-    text-align: center;
-    display: flex;
-    /* flex-direction: row; */
-  }
-
-  .hide-it {
-    position: absolute;
-    top: 0;
-    left: 0;
-    visibility: hidden;
-    width: 0;
   }
 }
 
@@ -175,35 +47,6 @@
   z-index: 10000;
 } */
 
-.center-header {
-  /* background-color: lime; */
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
-  padding: 20px;
-  font-size: 30px;
-  font-weight: 700;
-  font-family: "Libre Baskerville", serif;
-  justify-content: center;
-  font-weight: normal;
-  text-align: center;
-}
-/* 
-.left-header {
-  background-color: mediumaquamarine;
-  font-weight: normal;
-  text-align: center;
-} */
-.right-header {
-  grid-column: 3 / 4;
-  grid-row: 1 / 2;
-  display: flex;
-  justify-content:flex-end;
-  padding: 1em;
-  font-weight: normal;
-  text-align: center;
-  display: flex;
-  /* flex-direction: row; */
-}
 .random-button {
   flex: 1 1 20%;
   background-color: lightcoral;
@@ -217,31 +60,9 @@
   text-decoration: none;
   cursor: pointer;
 }
+
 .random-button:hover {
   background-color: lightsalmon;
-}
-
-#content {
-  position: relative;
-  min-height: 100%;
-  top: 70px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: row;
-  align-content: stretch;
-  min-height: 100vh;
-  scroll-behavior: smooth;
-}
-
-.left-container {
-  background-color: #e6e6e6;
-  min-width: 220px;
-  max-width: 440px;
-  flex: 1 1 20%;
-  min-height: 100%;
-  position: relative;
-  justify-content: center;
 }
 
 .clear-filter-button {
@@ -273,6 +94,17 @@
   height: 56px;
 }
 
+.logo-img {
+  width: 30px;
+  height: 30px;
+}
+
+.flex-left {
+  justify-content: flex-start;
+  max-width: 35px;
+  margin: 0.25em;
+}
+
 #filter-box {
   display: flex;
   flex-direction: column;
@@ -281,25 +113,6 @@
 .filter-component {
   margin: 2rem;
   background-color: lightgray;
-}
-
-.home-content {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  padding: 0.5em;
-}
-
-.activity-card {
-  flex: 1 1 20%;
-  margin: 0.5em;
-  padding: 1em;
-  background-color: #f2f2f2;
-  min-width: 150px;
-  max-width: 20%;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px lightgray;
 }
 
 .selected-activity-card {
@@ -337,6 +150,7 @@
 
 .filter-collapsible-group {
   cursor: pointer;
+  max-width: 100%;
   border: solid 1px lightgray;
   padding: 15px;
   background-color: #e6e6e6;
