--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -88,6 +88,17 @@
     box-shadow: 5px 5px 5px lightgray;
   }
 
+  .selected-activity-card {
+    background-color: #ffcccc;
+    flex: 1 0 30%;
+    margin: 0.5em;
+    padding: 1em;
+    min-width: 150px;
+    max-width: 50%;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px lightgray;
+  }
+
   /* 
 SLIDE IN SIDE-MENU
 */
