--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -20,7 +20,7 @@
     visibility: hidden;
   }
 
-  .center-header-sm {
+  .left-header {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     display: flex;
@@ -78,12 +78,12 @@
   }
 
   .activity-card {
-    flex: 1 0 30%;
+    flex: 1 0 25%;
     margin: 0.5em;
     padding: 1em;
     background-color: #f2f2f2;
-    min-width: 150px;
-    max-width: 50%;
+    min-width: 130px;
+    /* max-width: 40%; */
     border-radius: 10px;
     box-shadow: 5px 5px 5px lightgray;
   }
@@ -93,8 +93,7 @@
     flex: 1 0 30%;
     margin: 0.5em;
     padding: 1em;
-    min-width: 150px;
-    max-width: 50%;
+    min-width: 130px;
     border-radius: 10px;
     box-shadow: 5px 5px 5px lightgray;
   }
