--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -98,42 +98,10 @@
     box-shadow: 5px 5px 5px lightgray;
   }
 
+
   /* 
-SLIDE IN SIDE-MENU
-*/
-
-  .cd-panel {
-    /*...*/
-    visibility: hidden;
-    transition: visibility 0s 0.6s;
-  }
-
-  .cd-panel.cd-panel--is-visible {
-    visibility: visible;
-    transition: visibility 0s 0s;
-  }
-
-  .cd-panel__header {
-    /*...*/
-    position: absolute;
-    width: 80%;
-    height: 100%;
-    min-height: 100vh;
-    /* transform: translateY(-50px); */
-  }
-
-  .cd-panel--from-right .cd-panel__header {
-    right: 0;
-  }
-
-  .cd-panel--from-left .cd-panel__header {
-    left: 0;
-  }
-
-  /* .cd-panel--is-visible .cd-panel__header {
-    transition: transform 0.3s 0.3s;
-    transform: translateY(0px);
-  } */
+  HAMBURGER SLIDE
+  */
 
   .cd-panel__container {
     /*...*/
@@ -143,20 +111,5 @@ SLIDE IN SIDE-MENU
     height: 100%;
     top: 0;
     transition: transform 0.3s 0.3s;
-  }
-
-  .cd-panel--from-right .cd-panel__container {
-    right: 0;
-    transform: translate3d(100%, 0, 0);
-  }
-
-  .cd-panel--from-left .cd-panel__container {
-    left: 0;
-    transform: translate3d(-100%, 0, 0);
-  }
-
-  .cd-panel--is-visible .cd-panel__container {
-    transform: translate3d(0, 0, 0);
-    transition-delay: 0s;
   }
 }
