--- a/src/styles/browser.css
+++ b/src/styles/browser.css
@@ -8,7 +8,7 @@
     height: 70px;
     display: grid;
     grid-template-columns: 30% 40% 30%;
-    /* grid-template-rows: 70px; */
+    grid-template-rows: 70px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
       0 2px 10px 0 rgba(0, 0, 0, 0.12);
     align-items: center;
@@ -34,6 +34,7 @@
     grid-row: 1 / 2;
     padding: 20px;
     font-size: 30px;
+    visibility: hidden;
   }
 
   .right-header {
