I'm not sure what I did here tbh

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -108,6 +108,10 @@
   background-color: lightgray;
 }
 
+.button:active{
+  background-color: lightsalmon;
+}
+
 .collapsible {
   background-color: lightgray;
   color: #444;
