adjustments to slide panel size for reactive website

--- a/src/styles/browser.css
+++ b/src/styles/browser.css
@@ -121,6 +121,7 @@
     background-color: #e6e6e6;
     width: 30%;
     height: 100%;
+    min-width: 360px;
     top: 0;
     transition: transform 0.3s 0.3s;
   }
