--- a/src/styles/browser.css
+++ b/src/styles/browser.css
@@ -64,9 +64,9 @@
   .left-container {
     background-color: #e6e6e6;
     width: 300px;
-    min-width: 220px;
+    min-width: 360px;;
     max-width: 440px;
-    flex: 1 1 20%;
+    flex: 1 1 30%;
     min-height: 100%;
     position: relative;
     justify-content: center;
@@ -86,7 +86,7 @@
     padding: 1em;
     background-color: #f2f2f2;
     min-width: 150px;
-    max-width: 40%;
+    max-width: 40vw;
     border-radius: 10px;
     box-shadow: 5px 5px 5px lightgray;
 }
@@ -96,8 +96,7 @@
     flex: 1 0 20%;
     margin: 0.5em;
     padding: 1em;
-    min-width: 150px;
-    max-width: 40%;
+    width: 40%;
     border-radius: 10px;
     box-shadow: 5px 5px 5px lightgray;
   }
