--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -47,6 +47,10 @@
   z-index: 10000;
 } */
 
+.button:hover {
+  background-color: lightsalmon;
+}
+
 .random-button {
   flex: 1 1 20%;
   min-width: 60px;
