--- a/src/styles/browser.css
+++ b/src/styles/browser.css
@@ -84,7 +84,7 @@
     padding: 1em;
     background-color: #f2f2f2;
     min-width: 150px;
-    max-width: 40%;
+    max-width: 45vw;
     border-radius: 10px;
     box-shadow: 5px 5px 5px lightgray;
 }
