changed title to sans-serif. Removed duration from activity cards

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,6 +26,11 @@
   }
 }
 
+@font-face {
+  font-family: 'CaviarDreams';
+  src: local('CaviarDreams'), url(../fonts/CaviarDreams.ttf) format('ttf');
+}
+
 #selected-activity {
   display: block;
   height: 70px;
